--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="UTF-8">
-<title>ic_menu</title>
+<title>ic_spin</title>
 	<link rel="stylesheet" href="style/index.css">
 </head>
 
 <body>	
 	<div id="lottie"></div>
 	<script src="scripts/lottie.js" type="text/javascript"></script>
-	<script src="scripts/ic_menu.js" type="text/javascript"></script>
+	<script src="scripts/ic_spin.js" type="text/javascript"></script>
 </body>
 </html>
